--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -49,6 +49,7 @@ body {
 	text-decoration: none;
 	max-width: calc(50% - 20px);
 	z-index: 2147483647;
+	font-size: 14px;
 }
 
 .toastify.info{
@@ -59,6 +60,7 @@ body {
 .toastify.warning{
 	background: -webkit-linear-gradient(315deg, #ffd073, #f5bc54);
 	background: linear-gradient(135deg, #ffd073, #f5bc54);
+	color:red;
 }
 
 .toastify.danger{
